<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources>
<resources>
    <string name="app_name">An Audio Player</string>
    <string name="about_title">About An Audio Player</string>

    <string name="action_about">About&#8230;</string>

    <!-- player -->
    <string name="time_separator">/</string>
    <string name="time_dummy">XX:XX</string>
    <string name="title_dummy">X</string>

    <!-- about -->
    <string name="version_title">Version</string>
    <string name="version_dummy">x.y.z</string>
    <string name="authors_website_title">Author\'s Website</string>
    <string name="url">http://neko-daisuki.ddo.jp/~SumiTomohiko/index.html</string>
    <string name="license_title">License</string>
    <string name="license">Copyright &#169; 2013-2014 Tomohiko Sumi\n\
\n\
Permission is hereby granted, free of charge, to any person obtaining a copy of
this software and associated documentation files (the \&quot;Software\&quot;),
to deal in the Software without restriction, including without limitation the
rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is furnished
to do so, subject to the following conditions:\n\
\n\
The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.\n\
\n\
THE SOFTWARE IS PROVIDED \&quot;AS IS\&quot;, WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO
EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</string>

    <string name="playing_icon_desc">playing icon</string>
    <string name="navigator_button_desc">navigator button</string>
    <string name="auto_repeat">auto repeat</string>
</resources>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->
